# padhAi

./: .gitignore  COLLAB.md  README.md  pyproject.toml  requirements.txt
docs/: API.md  DEPLOYMENT.md  TESTING.md  TROUBLESHOOTING.md
notebooks/: explore_datasets.ipynb  fine_tuning_experiments.ipynb  test_explanation_engine.ipynb  test_gradio_ui.ipynb  test_ppt_extraction.ipynb
scripts/: benchmark_performance.py  cleanup_cache.py  generate_sample_ppt.py  test_complete_workflow.py  validate_models.py
src/: app.py  data_preparation.py  explanation_engine.py  fine_tune.py  model_inference.py  ppt_processor.py
tests/: test_app.py  test_data_preparation.py  test_explanation_engine.py  test_fine_tune.py  test_integration_e2e.py  test_model_inference.py  test_ppt_processor.py
